Expend column width for "vela workloads/traits"
Expended column width for `vela workloads/traits` and also
shortened the description for all workloads and traits.
Fixed a tiny issue in hack/reference/generate.go

To fix issue #827

--- a/charts/vela-core/templates/defwithtemplate/autoscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/autoscale.yaml
@@ -4,7 +4,7 @@ kind: TraitDefinition
 metadata:
   name: autoscale
   annotations:
-    definition.oam.dev/description: "`Autoscale` is used to automatically scale workloads by resource utilization metrics or cron triggers."
+    definition.oam.dev/description: "Automatically scales workloads by resource utilization metrics or cron triggers."
 spec:
   appliesToWorkloads:
     - webservice
