--- a/charts/vela-core/templates/defwithtemplate/manualscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/manualscale.yaml
@@ -3,7 +3,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: "`Scaler` is used to configure replicas for your service."
+    definition.oam.dev/description: "Configures replicas for your service."
   name: scaler
 spec:
   appliesToWorkloads:
