--- a/hack/vela-templates/definitions/metrics.yaml
+++ b/hack/vela-templates/definitions/metrics.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   name: metrics
   annotations:
-    definition.oam.dev/description: "`Metrics` is used to configure monitoring metrics for your service."
+    definition.oam.dev/description: "Configures monitoring metrics for your service."
 spec:
   appliesToWorkloads:
     - webservice
