--- a/hack/vela-templates/definitions/ingress.yaml
+++ b/hack/vela-templates/definitions/ingress.yaml
@@ -9,11 +9,17 @@ metadata:
 spec:
   status:
     customStatus: |-
-      if len(context.outputs.ingress.status.loadBalancer.ingress) > 0 {
-      	message: "Visiting URL: " + context.outputs.ingress.spec.rules[0].host + ", IP: " + context.outputs.ingress.status.loadBalancer.ingress[0].ip
+      let igs = context.outputs.ingress.status.loadBalancer.ingress
+      if igs == _|_ {
+        message: "No loadBalancer found, visiting by using 'vela port-forward " + context.appName + " --route'\n"
       }
-      if len(context.outputs.ingress.status.loadBalancer.ingress) == 0 {
-      	message: "No loadBalancer found, visiting by using 'vela port-forward " + context.appName + " --route'\n"
+      if len(igs) > 0 {
+        if igs[0].ip != _|_ {
+          message: "Visiting URL: " + context.outputs.ingress.spec.rules[0].host + ", IP: " + igs[0].ip
+        }
+        if igs[0].ip == _|_ {
+          message: "Visiting URL: " + context.outputs.ingress.spec.rules[0].host
+        }
       }
     healthPolicy: |
       isHealth: len(context.outputs.service.spec.clusterIP) > 0
