--- a/test/e2e-test/testdata/revision/trait-def.yaml
+++ b/test/e2e-test/testdata/revision/trait-def.yaml
@@ -2,7 +2,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
   name: bars.example.com
-  namespace: vela-system
+  namespace: oam-runtime-system
 spec:
   revisionEnabled: true
   definitionRef:
