--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -548,38 +548,41 @@ spec:
                 type: string
               workflow:
                 description: Workflow record the status of workflow steps
-                items:
-                  description: WorkflowStepStatus record the status of a workflow step
-                  properties:
-                    name:
-                      type: string
-                    phase:
-                      description: WorkflowStepPhase describes the phase of a workflow step.
-                      type: string
-                    resourceRef:
-                      description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                properties:
+                  steps:
+                    items:
+                      description: WorkflowStepStatus record the status of a workflow step
                       properties:
-                        apiVersion:
-                          description: APIVersion of the referenced object.
-                          type: string
-                        kind:
-                          description: Kind of the referenced object.
-                          type: string
                         name:
-                          description: Name of the referenced object.
                           type: string
-                        uid:
-                          description: UID of the referenced object.
+                        phase:
+                          description: WorkflowStepPhase describes the phase of a workflow step.
                           type: string
-                      required:
-                      - apiVersion
-                      - kind
-                      - name
+                        resourceRef:
+                          description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                          properties:
+                            apiVersion:
+                              description: APIVersion of the referenced object.
+                              type: string
+                            kind:
+                              description: Kind of the referenced object.
+                              type: string
+                            name:
+                              description: Name of the referenced object.
+                              type: string
+                            uid:
+                              description: UID of the referenced object.
+                              type: string
+                          required:
+                          - apiVersion
+                          - kind
+                          - name
+                          type: object
+                        type:
+                          type: string
                       type: object
-                    type:
-                      type: string
-                  type: object
-                type: array
+                    type: array
+                type: object
             type: object
         type: object
     served: true
@@ -874,22 +877,25 @@ spec:
                 type: object
               workflow:
                 description: 'Workflow defines how to customize the control logic. If workflow is specified, Vela won''t apply any resource, but provide rendered output in AppRevision. Workflow steps are executed in array order, and each step: - will have a context in annotation. - should mark "finish" phase in status.conditions.'
-                items:
-                  description: WorkflowStep defines how to execute a workflow step.
-                  properties:
-                    name:
-                      description: Name is the unique name of the workflow step.
-                      type: string
-                    properties:
+                properties:
+                  steps:
+                    items:
+                      description: WorkflowStep defines how to execute a workflow step.
+                      properties:
+                        name:
+                          description: Name is the unique name of the workflow step.
+                          type: string
+                        properties:
+                          type: object
+                          
+                        type:
+                          type: string
+                      required:
+                      - name
+                      - type
                       type: object
-                      
-                    type:
-                      type: string
-                  required:
-                  - name
-                  - type
-                  type: object
-                type: array
+                    type: array
+                type: object
             required:
             - components
             type: object
@@ -1127,38 +1133,41 @@ spec:
                 type: string
               workflow:
                 description: Workflow record the status of workflow steps
-                items:
-                  description: WorkflowStepStatus record the status of a workflow step
-                  properties:
-                    name:
-                      type: string
-                    phase:
-                      description: WorkflowStepPhase describes the phase of a workflow step.
-                      type: string
-                    resourceRef:
-                      description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                properties:
+                  steps:
+                    items:
+                      description: WorkflowStepStatus record the status of a workflow step
                       properties:
-                        apiVersion:
-                          description: APIVersion of the referenced object.
-                          type: string
-                        kind:
-                          description: Kind of the referenced object.
-                          type: string
                         name:
-                          description: Name of the referenced object.
                           type: string
-                        uid:
-                          description: UID of the referenced object.
+                        phase:
+                          description: WorkflowStepPhase describes the phase of a workflow step.
                           type: string
-                      required:
-                      - apiVersion
-                      - kind
-                      - name
+                        resourceRef:
+                          description: A TypedReference refers to an object by Name, Kind, and APIVersion. It is commonly used to reference cluster-scoped objects or objects where the namespace is already known.
+                          properties:
+                            apiVersion:
+                              description: APIVersion of the referenced object.
+                              type: string
+                            kind:
+                              description: Kind of the referenced object.
+                              type: string
+                            name:
+                              description: Name of the referenced object.
+                              type: string
+                            uid:
+                              description: UID of the referenced object.
+                              type: string
+                          required:
+                          - apiVersion
+                          - kind
+                          - name
+                          type: object
+                        type:
+                          type: string
                       type: object
-                    type:
-                      type: string
-                  type: object
-                type: array
+                    type: array
+                type: object
             type: object
         type: object
     served: true
