--- a/.github/workflows/issue-commands.yml
+++ b/.github/workflows/issue-commands.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           repository: "oam-dev/kubevela-github-actions"
           path: ./actions
-          ref: main
+          ref: v0.3
       - name: Install Actions
         run: npm install --production --prefix ./actions
       - name: Run Commands
