--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -41,6 +41,10 @@ spec:
         						containerPort: parameter.port
         					}]
         
+        					if parameter["imagePullPolicy"] != _|_ {
+        						imagePullPolicy: parameter.imagePullPolicy
+        					}
+        
         					if parameter["cmd"] != _|_ {
         						command: parameter.cmd
         					}
@@ -89,6 +93,15 @@ spec:
         
         				}]
         
+        			if parameter["imagePullPolicy"] != _|_ {
+        				imagePullSecrets: [ for v in parameter.imagePullPolicy {
+        					{
+        						name: v.name
+        					}
+        				},
+        				]
+        			}
+        
         			if parameter["volumes"] != _|_ {
         				volumes: [ for v in parameter.volumes {
         					{
@@ -131,6 +144,12 @@ spec:
         	// +usage=Which image would you like to use for your service
         	// +short=i
         	image: string
+        
+        	// +usage=Specify image pull policy for your service
+        	imagePullPolicy?: string
+        
+        	// +usage=Specify image pull secrets for your service
+        	imagePullSecrets?: [...string]
         
         	// +usage=Which port do you want customer traffic sent to
         	// +short=p
