--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -32,6 +32,10 @@ spec:
         					name:  context.name
         					image: parameter.image
         
+        					if parameter["imagePullPolicy"] != _|_ {
+        						imagePullPolicy: parameter.imagePullPolicy
+        					}
+        
         					if parameter["cmd"] != _|_ {
         						command: parameter.cmd
         					}
@@ -76,6 +80,13 @@ spec:
         
         				}]
         
+        			if parameter["imagePullSecrets"] != _|_ {
+        				imagePullSecrets: [ for v in parameter.imagePullSecrets {
+        					name: v
+        				},
+        				]
+        			}
+        
         			if parameter["volumes"] != _|_ {
         				volumes: [ for v in parameter.volumes {
         					{
@@ -119,6 +130,12 @@ spec:
         	// +usage=Which image would you like to use for your service
         	// +short=i
         	image: string
+        
+        	// +usage=Specify image pull policy for your service
+        	imagePullPolicy?: string
+        
+        	// +usage=Specify image pull secrets for your service
+        	imagePullSecrets?: [...string]
         
         	// +usage=Commands to run in the container
         	cmd?: [...string]
