Fix: add flag `--label` to filer components and traits
Added flag `--flag` to filter when executing `vela componnets` and
`vela traits`

Fix https://github.com/oam-dev/kubevela.io/pull/222#discussion_r699214816

--- a/charts/vela-core/templates/definitions/terraform-alibaba-oss.yaml
+++ b/charts/vela-core/templates/definitions/terraform-alibaba-oss.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: {{.Values.systemDefinitionNamespace}}
   annotations:
     definition.oam.dev/description: Terraform configuration for Alibaba Cloud OSS object
+  labels:
     type: terraform
 spec:
   workload:
