--- a/charts/vela-core/templates/definitions/terraform-alibaba-ack.yaml
+++ b/charts/vela-core/templates/definitions/terraform-alibaba-ack.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: {{.Values.systemDefinitionNamespace}}
   annotations:
     definition.oam.dev/description: Terraform configuration for Alibaba Cloud ACK cluster
+  labels:
     type: terraform
 spec:
   workload:
