--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -102,3 +102,10 @@ dependCheckWait: 30s
 
 # OAMSpecVer is the oam spec version controller want to setup
 OAMSpecVer: "v0.3"
+
+apiServer:
+  enabled: false
+  port: 8000
+  replicaCount: 1
+  Service:
+    type: ClusterIP
