--- a/charts/vela-core/templates/addons-default/terraform.yaml
+++ b/charts/vela-core/templates/addons-default/terraform.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for
       Terraform.
+    helm.sh/hook: post-install, post-upgrade, pre-delete
   name: terraform
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
